--- a/index.html
+++ b/index.html
@@ -1,99 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Mimi – Cinematic Reel</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Be My Valentine 💖</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap" rel="stylesheet">
+<!-- Confetti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  width: 100vw;
+  background: radial-gradient(circle at top, #ff5f9e, #b30059);
   height: 100vh;
-  background: radial-gradient(circle at center, #0c0c0c 0%, #000 75%);
   overflow: hidden;
+  color: white;
+}
+
+.container {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Cinzel', serif;
+  text-align: center;
 }
 
-/* CINEMATIC VIGNETTE */
-body::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: radial-gradient(circle, transparent 40%, rgba(0,0,0,0.8) 85%);
-  z-index: 5;
-}
-
-/* FLOATING GOLD PARTICLES */
-.particle {
-  position: absolute;
-  width: 2px;
-  height: 2px;
-  background: gold;
-  opacity: 0.4;
-  animation: float 8s linear infinite;
+.card {
+  backdrop-filter: blur(14px);
+  background: rgba(255,255,255,0.12);
+  border-radius: 28px;
+  padding: 40px 30px;
+  width: 90%;
+  max-width: 420px;
+  box-shadow: 0 30px 80px rgba(0,0,0,0.3);
+  animation: float 4s ease-in-out infinite;
 }
 
 @keyframes float {
-  from { transform: translateY(100vh); }
-  to { transform: translateY(-20vh); }
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-12px); }
 }
 
-/* NAME CONTAINER */
-.container {
-  position: relative;
-  z-index: 10;
+h1 {
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+  text-shadow: 0 0 15px rgba(255,255,255,0.8);
+  animation: glitch 2.5s infinite;
+}
+
+@keyframes glitch {
+  0% { text-shadow: 2px 2px #ff004f; }
+  25% { text-shadow: -2px 2px #ff85b3; }
+  50% { text-shadow: 2px -2px #ff004f; }
+  75% { text-shadow: -2px -2px #ff85b3; }
+  100% { text-shadow: 2px 2px #ff004f; }
+}
+
+.message {
+  font-size: 1.1rem;
+  opacity: 0.85;
+  margin-bottom: 30px;
+}
+
+button {
+  background: linear-gradient(45deg, #ff004f, #ff85b3);
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 50px;
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+button:hover {
   transform: scale(1.1);
+  box-shadow: 0 20px 50px rgba(0,0,0,0.4);
 }
 
-/* GOLD TEXT */
-.text {
-  font-size: 4.5rem;
-  letter-spacing: 0.15em;
-  color: #ffd36a;
-  text-shadow:
-    0 0 10px rgba(255,215,0,0.4),
-    0 0 30px rgba(255,215,0,0.35),
-    0 0 80px rgba(255,215,0,0.2);
-  opacity: 0;
-  transform: translateY(30px) scale(0.95);
+.hidden {
+  display: none;
 }
 
-/* REVEAL ANIMATION */
 .reveal {
-  animation: reveal 1.8s ease-out forwards;
+  font-size: 1.6rem;
+  margin-top: 25px;
+  animation: pop 0.6s ease;
 }
 
-@keyframes reveal {
-  to {
-    opacity: 1;
+@keyframes pop {
+  0% { transform: scale(0.5); opacity: 0; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+/* Floating Hearts */
+.heart {
+  position: absolute;
+  bottom: -50px;
+  font-size: 24px;
+  animation: rise linear infinite;
+  opacity: 0.8;
+}
+
+@keyframes rise {
+  0% {
     transform: translateY(0) scale(1);
+    opacity: 0;
   }
-}
-
-/* SUBTITLE */
-.subtitle {
-  margin-top: 18px;
-  font-size: 0.9rem;
-  letter-spacing: 0.4em;
-  color: rgba(255,255,255,0.6);
-  opacity: 0;
-  animation: fadeIn 1.5s ease forwards;
-  animation-delay: 1.6s;
-}
-
-@keyframes fadeIn {
-  to { opacity: 1; }
+  10% { opacity: 1; }
+  100% {
+    transform: translateY(-110vh) scale(1.6);
+    opacity: 0;
+  }
 }
 </style>
 </head>
@@ -101,50 +126,45 @@ body::after {
 <body>
 
 <div class="container">
-  <div class="text" id="name"></div>
-  <div class="subtitle">LIMITLESS</div>
+  <div class="card">
+    <h1>Hey You 💘</h1>
+    <p class="message">Tap the button… something cute awaits ✨</p>
+    <button onclick="revealLove()">Tap Me 💖</button>
+    <div id="loveText" class="reveal hidden">Will you be my Valentine? 🥰</div>
+  </div>
 </div>
 
 <script>
-/* NAME */
-const name = "Mimi";
-const nameEl = document.getElementById("name");
+function revealLove() {
+  document.getElementById('loveText').classList.remove('hidden');
 
-/* TYPEWRITER + CINEMATIC PAUSE */
-let index = 0;
+  confetti({
+    particleCount: 180,
+    spread: 80,
+    origin: { y: 0.6 }
+  });
 
-function typeName() {
-  if (index < name.length) {
-    nameEl.textContent += name[index];
-    index++;
-    setTimeout(typeName, 220);
-  } else {
-    nameEl.classList.add("reveal");
-    setTimeout(loop, 3500);
+  for (let i = 0; i < 20; i++) {
+    createHeart();
   }
 }
 
-function loop() {
-  index = 0;
-  nameEl.textContent = "";
-  nameEl.classList.remove("reveal");
-  setTimeout(typeName, 1200);
+function createHeart() {
+  const heart = document.createElement('div');
+  heart.className = 'heart';
+  heart.innerHTML = '💖';
+  heart.style.left = Math.random() * 100 + 'vw';
+  heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+  document.body.appendChild(heart);
+
+  setTimeout(() => {
+    heart.remove();
+  }, 6000);
 }
 
-/* PARTICLES */
-for (let i = 0; i < 80; i++) {
-  const p = document.createElement("div");
-  p.className = "particle";
-  p.style.left = Math.random() * 100 + "vw";
-  p.style.animationDuration = 5 + Math.random() * 6 + "s";
-  p.style.opacity = Math.random();
-  document.body.appendChild(p);
-}
-
-/* START */
-setTimeout(typeName, 800);
+// Ambient floating hearts
+setInterval(createHeart, 800);
 </script>
 
 </body>
 </html>
-
