--- a/index.html
+++ b/index.html
@@ -1,170 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Be My Valentine 💖</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Will You Be My Princess? ✨👑💕</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: linear-gradient(135deg, #fff0f5 0%, #f8e1e9 40%, #f5e0ff 100%);
+      font-family: 'Playfair Display', serif;
+      color: #2d1b24;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-<!-- Confetti -->
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+    .overlay {
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      background: radial-gradient(circle at 50% 30%, rgba(255, 245, 200, 0.25) 0%, transparent 60%);
+      z-index: 1;
+    }
 
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
+    .container {
+      position: relative;
+      z-index: 10;
+      text-align: center;
+      padding: 60px 70px;
+      background: rgba(255, 255, 255, 0.78);
+      border-radius: 42px;
+      box-shadow: 0 20px 80px rgba(180, 120, 160, 0.25),
+                  inset 0 0 60px rgba(255, 245, 220, 0.4);
+      backdrop-filter: blur(12px);
+      border: 2px solid rgba(255, 220, 180, 0.5);
+      max-width: 720px;
+    }
 
-body {
-  background: radial-gradient(circle at top, #ff5f9e, #b30059);
-  height: 100vh;
-  overflow: hidden;
-  color: white;
-}
+    h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 7.2rem;
+      margin: 0 0 20px;
+      color: #b5838d;
+      text-shadow: 0 0 40px rgba(255, 215, 180, 0.7),
+                   4px 4px 20px rgba(139, 69, 19, 0.15);
+      letter-spacing: 4px;
+    }
 
-.container {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+    .subtitle {
+      font-family: 'Cinzel Decorative', cursive;
+      font-size: 2.8rem;
+      color: #8d5524;
+      margin-bottom: 50px;
+      letter-spacing: 3px;
+      text-shadow: 0 2px 10px rgba(255, 245, 200, 0.6);
+    }
 
-.card {
-  backdrop-filter: blur(14px);
-  background: rgba(255,255,255,0.12);
-  border-radius: 28px;
-  padding: 40px 30px;
-  width: 90%;
-  max-width: 420px;
-  box-shadow: 0 30px 80px rgba(0,0,0,0.3);
-  animation: float 4s ease-in-out infinite;
-}
+    .question {
+      font-size: 2.6rem;
+      margin: 40px 0 60px;
+      color: #5d4037;
+      font-weight: 600;
+      min-height: 100px;
+    }
 
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-12px); }
-}
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 120px;
+      flex-wrap: wrap;
+    }
 
-h1 {
-  font-size: 2.2rem;
-  margin-bottom: 20px;
-  text-shadow: 0 0 15px rgba(255,255,255,0.8);
-  animation: glitch 2.5s infinite;
-}
+    button {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.1rem;
+      padding: 18px 70px;
+      border: none;
+      border-radius: 999px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      letter-spacing: 1px;
+      box-shadow: 0 10px 30px rgba(139, 69, 19, 0.18);
+    }
 
-@keyframes glitch {
-  0% { text-shadow: 2px 2px #ff004f; }
-  25% { text-shadow: -2px 2px #ff85b3; }
-  50% { text-shadow: 2px -2px #ff004f; }
-  75% { text-shadow: -2px -2px #ff85b3; }
-  100% { text-shadow: 2px 2px #ff004f; }
-}
+    #yes {
+      background: linear-gradient(135deg, #ffd700, #f4c430, #ffdb58);
+      color: #4a2c0d;
+      border: 2px solid #d4af37;
+    }
 
-.message {
-  font-size: 1.1rem;
-  opacity: 0.85;
-  margin-bottom: 30px;
-}
+    #yes:hover {
+      transform: scale(1.15) translateY(-6px);
+      box-shadow: 0 20px 60px rgba(255, 215, 0, 0.45);
+      background: linear-gradient(135deg, #ffeb3b, #ffd54f, #ffee58);
+    }
 
-button {
-  background: linear-gradient(45deg, #ff004f, #ff85b3);
-  border: none;
-  color: white;
-  padding: 15px 30px;
-  border-radius: 50px;
-  font-size: 1rem;
-  cursor: pointer;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
+    #no {
+      background: linear-gradient(135deg, #e0c3fc, #c3b1e1);
+      color: #4a2c0d;
+      border: 2px solid #b19cd9;
+    }
 
-button:hover {
-  transform: scale(1.1);
-  box-shadow: 0 20px 50px rgba(0,0,0,0.4);
-}
+    #no:hover {
+      transform: translateY(-4px) scale(1.08);
+      box-shadow: 0 15px 40px rgba(200, 180, 240, 0.4);
+    }
 
-.hidden {
-  display: none;
-}
+    .glitter {
+      position: absolute;
+      pointer-events: none;
+      width: 8px;
+      height: 8px;
+      background: white;
+      border-radius: 50%;
+      box-shadow: 0 0 12px white, 0 0 24px #fff9c4;
+      opacity: 0;
+      animation: sparkle linear infinite;
+    }
 
-.reveal {
-  font-size: 1.6rem;
-  margin-top: 25px;
-  animation: pop 0.6s ease;
-}
+    @keyframes sparkle {
+      0%   { opacity: 0; transform: scale(0.2) translateY(0); }
+      20%  { opacity: 0.9; transform: scale(1.1); }
+      50%  { opacity: 0.7; transform: scale(0.9) translateY(-20vh); }
+      100% { opacity: 0; transform: scale(0.3) translateY(-60vh); }
+    }
 
-@keyframes pop {
-  0% { transform: scale(0.5); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
-}
+    .princess-heart {
+      position: absolute;
+      font-size: 2.8rem;
+      opacity: 0.7;
+      pointer-events: none;
+      animation: floatHeart 14s linear infinite;
+    }
 
-/* Floating Hearts */
-.heart {
-  position: absolute;
-  bottom: -50px;
-  font-size: 24px;
-  animation: rise linear infinite;
-  opacity: 0.8;
-}
+    @keyframes floatHeart {
+      0%   { transform: translateY(120vh) rotate(0deg); opacity: 0.3; }
+      30%  { opacity: 0.9; }
+      100% { transform: translateY(-30vh) rotate(720deg); opacity: 0; }
+    }
 
-@keyframes rise {
-  0% {
-    transform: translateY(0) scale(1);
-    opacity: 0;
-  }
-  10% { opacity: 1; }
-  100% {
-    transform: translateY(-110vh) scale(1.6);
-    opacity: 0;
-  }
-}
-</style>
+    .crown {
+      font-size: 3.8rem;
+      margin-left: 12px;
+      display: inline-block;
+      animation: gentleCrown 6s ease-in-out infinite;
+    }
+
+    @keyframes gentleCrown {
+      0%,100% { transform: rotate(-6deg) translateY(0); }
+      50%     { transform: rotate(6deg) translateY(-8px); }
+    }
+
+    .hidden { display: none; }
+  </style>
 </head>
-
 <body>
 
-<div class="container">
-  <div class="card">
-    <h1>Hey You 💘</h1>
-    <p class="message">Tap the button… something cute awaits ✨</p>
-    <button onclick="revealLove()">Tap Me 💖</button>
-    <div id="loveText" class="reveal hidden">Will you be my Valentine? 🥰</div>
+  <div class="overlay"></div>
+
+  <div class="container">
+    <h1>Will You Be<br>My Valentine? <span class="crown">👑</span></h1>
+
+    <div class="subtitle">My dearest princess… ✨</div>
+
+    <div class="question" id="question">May I have this honor? 💕</div>
+
+    <div class="buttons">
+      <button id="yes">Yes, my love 💞</button>
+      <button id="no">Not today…</button>
+    </div>
+
+    <div id="happy" class="hidden">
+      <div style="font-size: 5.5rem; color: #b5838d; margin: 50px 0; font-family: 'Great Vibes', cursive;">
+        My heart is yours forever ✨👑💖
+      </div>
+      <div style="font-size: 2.4rem; color: #5d4037; margin: 30px 0;">
+        You’ve made me the happiest soul in every kingdom
+      </div>
+    </div>
+
+    <div id="sad" class="hidden">
+      <div style="font-size: 4.2rem; color: #8d5524; margin: 50px 0; font-family: 'Great Vibes', cursive;">
+        I shall wait patiently… 🥀
+      </div>
+      <div style="font-size: 2rem; color: #5d4037;">
+        My crown feels a little heavier tonight
+      </div>
+    </div>
   </div>
-</div>
 
-<script>
-function revealLove() {
-  document.getElementById('loveText').classList.remove('hidden');
+  <script>
+    const yesBtn = document.getElementById('yes');
+    const noBtn = document.getElementById('no');
+    const question = document.getElementById('question');
+    const happy = document.getElementById('happy');
+    const sad = document.getElementById('sad');
 
-  confetti({
-    particleCount: 180,
-    spread: 80,
-    origin: { y: 0.6 }
-  });
+    // YES → royal celebration
+    yesBtn.addEventListener('click', () => {
+      question.classList.add('hidden');
+      noBtn.classList.add('hidden');
+      yesBtn.style.display = 'none';
+      happy.classList.remove('hidden');
+      createGlitterBurst(80);
+      createHeartRain(40);
+    });
 
-  for (let i = 0; i < 20; i++) {
-    createHeart();
-  }
-}
+    // NO → soft & elegant escape
+    noBtn.addEventListener('mouseover', () => {
+      const x = (Math.random() - 0.5) * 180;
+      const y = (Math.random() - 0.5) * 140;
+      noBtn.style.transform = `translate(${x}px, ${y}px) scale(0.92)`;
+      noBtn.style.transition = 'all 0.6s ease';
+    });
 
-function createHeart() {
-  const heart = document.createElement('div');
-  heart.className = 'heart';
-  heart.innerHTML = '💖';
-  heart.style.left = Math.random() * 100 + 'vw';
-  heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
-  document.body.appendChild(heart);
+    noBtn.addEventListener('click', () => {
+      question.classList.add('hidden');
+      yesBtn.style.display = 'none';
+      noBtn.innerHTML = "I understand…";
+      noBtn.disabled = true;
+      sad.classList.remove('hidden');
+    });
 
-  setTimeout(() => {
-    heart.remove();
-  }, 6000);
-}
+    // Glitter particles
+    function createGlitter() {
+      const g = document.createElement('div');
+      g.className = 'glitter';
+      g.style.left = Math.random() * 100 + 'vw';
+      g.style.top = '-10px';
+      g.style.animationDuration = (Math.random() * 4 + 3) + 's';
+      g.style.animationDelay = Math.random() * 6 + 's';
+      g.style.background = ['#fff9c4','#ffd700','#ffeb3b','#ffe4e1'][Math.floor(Math.random()*4)];
+      document.body.appendChild(g);
+      setTimeout(() => g.remove(), 10000);
+    }
 
-// Ambient floating hearts
-setInterval(createHeart, 800);
-</script>
+    function createGlitterBurst(count) {
+      for(let i = 0; i < count; i++) {
+        setTimeout(() => {
+          const g = document.createElement('div');
+          g.className = 'glitter';
+          g.style.left = '50%';
+          g.style.top = '50%';
+          g.style.transform = `translate(-50%, -50%)`;
+          const angle = Math.random() * Math.PI * 2;
+          const dist = Math.random() * 400 + 100;
+          g.style.setProperty('--tx', Math.cos(angle) * dist + 'px');
+          g.style.setProperty('--ty', Math.sin(angle) * dist + 'px');
+          g.style.animation = 'sparkle 1.8s forwards';
+          document.body.appendChild(g);
+          setTimeout(() => g.remove(), 2500);
+        }, i * 40);
+      }
+    }
+
+    // Floating princess hearts
+    function createHeartRain(count) {
+      for(let i = 0; i < count; i++) {
+        setTimeout(() => {
+          const h = document.createElement('div');
+          h.className = 'princess-heart';
+          h.innerHTML = ['💗','💖','✨','💕','🌸','👑'][Math.floor(Math.random()*6)];
+          h.style.left = Math.random() * 100 + 'vw';
+          h.style.top = '100vh';
+          h.style.fontSize = (Math.random() * 2 + 1.8) + 'rem';
+          h.style.animationDuration = (Math.random() * 8 + 10) + 's';
+          document.body.appendChild(h);
+          setTimeout(() => h.remove(), 18000);
+        }, i * 180);
+      }
+    }
+
+    // Gentle background sparkle
+    setInterval(createGlitter, 600);
+
+    // Initial soft heart rain
+    createHeartRain(12);
+  </script>
+
+  <style>
+    @keyframes sparkle {
+      0%   { opacity: 0; transform: translate(-50%, -50%) scale(0.1); }
+      30%  { opacity: 1; transform: translate(var(--tx), var(--ty)) scale(1.3); }
+      100% { opacity: 0; transform: translate(var(--tx), var(--ty)) scale(0.4); }
+    }
+  </style>
 
 </body>
 </html>
